Actualizada la plantilla del pdf